@@ -117,11 +117,15 @@ function createServer(app, opts) {
 
         // Call the app.
         app(env, function handleResponse(status, headers, body) {
+            if (env.requestMethod == "HEAD") {
+                body = "";
+                headers["Content-Length"] = "0";
+            }
+
             res.writeHead(status, headers);
 
-            if (env.requestMethod == "HEAD") {
-                res.end();
-            } else if (body instanceof EventEmitter) {
+            // TODO: Should this be `instanceof Stream`?
+            if (body instanceof EventEmitter) {
                 if (typeof body.resume == "function") {
                     body.resume();
                 }
