@@ -38,7 +38,7 @@ function makeEnv(opts) {
 /**
  * Calls the given `callback` with the result of sending a mock request to the
  * given `app`. Creates the environment to use from the given `opts`. Set
- * +opts.lint+ to `true` to wrap the `app` in a lint middleware.
+ * `opts.lint` to `true` to wrap the `app` in a lint middleware.
  */
 function request(opts, app, callback) {
     opts = opts || {};
@@ -50,38 +50,42 @@ function request(opts, app, callback) {
         app = app.toApp();
     }
 
+    if (typeof app != "function") {
+        throw new strata.Error("App must be a function");
+    }
+
     if (opts.lint) {
         app = lint(app);
-        delete opts.lint;
     }
 
-    if (opts.stream) {
-        delete opts.stream;
-        app(makeEnv(opts), callback);
-    } else {
+    var env = makeEnv(opts);
+
+    app(env, function (status, headers, body) {
+        if (env.requestMethod == "HEAD") {
+            body = "";
+            headers["Content-Length"] = "0";
+        }
+
+        if (typeof body == "string" || opts.stream) {
+            callback(null, status, headers, body);
+            return;
+        }
+
         // Buffer the body of the response for easy async testing.
-        app(makeEnv(opts), function (status, headers, body) {
-            if (typeof body == "string") {
-                callback(null, status, headers, body);
-            } else {
-                assert.instanceOf(body, EventEmitter);
+        var contents = "";
 
-                var contents = "";
+        if (typeof body.resume == "function") {
+            body.resume();
+        }
 
-                if (typeof body.resume == "function") {
-                    body.resume();
-                }
-
-                body.on("data", function (buffer) {
-                    contents += buffer.toString("utf8");
-                });
-
-                body.on("end", function () {
-                    callback(null, status, headers, contents);
-                });
-            }
+        body.on("data", function (buffer) {
+            contents += buffer.toString("utf8");
         });
-    }
+
+        body.on("end", function () {
+            callback(null, status, headers, contents);
+        });
+    });
 }
 
 /**
